# simpleCNN

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
cmake/: clang-cxx-dev-tools.cmake
cmake/DownloadProject/: DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake
examples/: CMakeLists.txt  main.cpp
examples/cifar10/: test.cpp  train.cpp
examples/mnist/: test.cpp  train.cpp
include/: node.h
include/activations/: activation_function.h
include/core/: backend.h
include/core/framework/: device.h  op_kernel.h  tensor.h  tensor_storage.h  tensor_utils.h
include/core/framework/tensor_subtypes/: 2d_tensor.h  3d_tensor.h
include/core/kernels/: conv2d_op.h  conv2d_op_openblas.h
include/core/params/: conv_params.h  params.h
include/layers/: convolutional_layer.h  feedforward_layer.h  layer.h
include/util/: aligned_allocator.h  colored_print.h  im2col2im.h  simple_error.h  util.h
simpleCNN/: network.h  network_types.h  node.h  simpleCNN.h
simpleCNN/activations/: activation_function.h  activation_layer.h  relu.h  softmax.h  tanh.h
simpleCNN/core/: backend.h
simpleCNN/core/framework/: device.h  op_kernel.h  tensor.h  tensor_storage.h  tensor_utils.h
simpleCNN/core/framework/tensor_subtypes/: 2d_tensor.h  3d_tensor.h
simpleCNN/core/kernels/: con_grad_op.h  con_op.h  con_op_cuda.h  con_op_openblas.h  conv2d_grad_op.h  conv2d_grad_op_openblas.h  conv2d_op.h  conv2d_op_openblas.h  conv_grad_op.h  conv_op.h  conv_op_cuda.h  conv_op_openblas.h  cuda_util_kernels.cu  cuda_util_kernels.h  max_grad_op.h  max_op.h  max_op_cuda.h  max_op_internal.h  maxpooling_grad_op.h  maxpooling_op.h  maxpooling_op_internal.h
simpleCNN/core/kernels/activation_kernels/: activation_op.h  activation_op_cuda.h  activation_op_internal.h
simpleCNN/core/kernels/connected_kernels/: con_grad_op.h  con_op.h  con_op_cuda.h  con_op_openblas.h
simpleCNN/core/kernels/convolution_kernels/: conv_grad_op.h  conv_op.h  conv_op_cuda.h  conv_op_openblas.h
simpleCNN/core/kernels/dropout_kernels/: dropout_op.h  dropout_op_cuda.h  dropout_op_internal.h
simpleCNN/core/kernels/maxpooling_kernels/: max_grad_op.h  max_op.h  max_op_cuda.h  max_op_internal.h
simpleCNN/core/params/: activation_params.h  con_params.h  conv_params.h  dropout_params.h  max_params.h  params.h
simpleCNN/io/: parse_cifar10.h  parse_mnist.h  serialize.h
simpleCNN/layers/: batchnorm_layer.h  connected_layer.h  convolutional_layer.h  dropout_layer.h  feedforward_layer.h  layer.h  maxpooling_layer.h
simpleCNN/loss/: loss_functions.h  loss_layer.h  softmax.h
simpleCNN/lossfunctions/: loss_functions.h
simpleCNN/optimizers/: optimizer.h
simpleCNN/util/: aligned_allocator.h  colored_print.h  cuda_utils.h  im2col2im.h  math_functions.h  random.h  simple_error.h  util.h  weight_init.h
src/: main.cpp
test/: CMakeLists.txt  test.cpp  test_activation_function.h  test_activation_layer.h  test_connected_layer.h  test_convolutional_layer.h  test_cuda.h  test_dropout_layer.h  test_feedforward_layer.h  test_loss_functions.h  test_loss_layer.h  test_math_functions.h  test_maxpooling_layer.h  test_network.h  test_optimizer.h  test_serialization.h  test_tensor.h  test_tensor_multiplication.h  test_weight_init.h
